Update all files